Having the fun drawing part in place

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,6 @@
   </div>
 
   <div class="mainContainer">
-    <!-- <app-universe></app-universe> -->
-    <span>the grid</span>
+    <app-universe></app-universe>
   </div>
 </div>
