Added Initialization, Cell State Change, Reset, Save to File

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   </h1>
 
   <div class="leftContainer">
-     <app-menu></app-menu>
+     <app-game [universe]="universe"></app-game>
   </div>
 
   <div class="mainContainer">
-    <app-universe></app-universe>
+    <app-universe #universe></app-universe>
   </div>
 </div>
