--- a/src/app/universe/universe.component.html
+++ b/src/app/universe/universe.component.html
@@ -1,7 +1,7 @@
 
 <div class="universe-container" [ngStyle]="{'width':universeContainerSize}">   
-  <div  *ngFor="let cell of universe" class="cell">
-       <span style="color: black">  </span>
+  <div  *ngFor="let cell of universe" >
+       <div class="cell" [ngStyle]="{'background': cell.getIsAlive() ? 'blue' : 'lightgray'}" (click)="cell.changeCellState()"></div>
   </div>
 </div>
 
