--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,7 @@
     <ul id="menu">
       <li>
         <div>
-          <a target="_blank"> Init </a>
+          <a target="_blank" (click)="initGame()"> Reset </a>
         </div>
       </li>
       <li>
@@ -16,7 +16,7 @@
       </li>
       <li>
         <div>
-          <a target="_blank"> Save </a>
+          <a target="_blank" (click)="saveState()"> Save </a>
         </div>
       </li>
       <li>
