added loading of the gosper glider gun

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,14 @@
     <ul id="menu">
       <li>
         <div>
-          <a target="_blank" (click)="initGame()"> Reset </a>
+          <a target="_blank" (click)="initGame()"> Clear All </a>
         </div>
       </li>
+      <li>
+          <div>
+            <a target="_blank" (click)="loadGosperGliderGun()"> Load Gosper Glider Gun </a>
+          </div>
+        </li>
       <li>
         <div>
           <a target="_blank"> Start </a>
