--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -11,12 +11,12 @@
         </li>
       <li>
         <div>
-          <a target="_blank"> Start </a>
+          <a target="_blank" (click)="start()"> Start </a>
         </div>
       </li>
       <li>
         <div>
-          <a target="_blank"> Stop </a>
+          <a target="_blank" (click)="stop()"> Stop </a>
         </div>
       </li>
       <li>
