--- a/src/app/universe/universe.component.html
+++ b/src/app/universe/universe.component.html
@@ -1,5 +1,5 @@
-<div class="universe-container" [ngStyle]="{'width':slimGenerationSize}">
-  <div *ngFor="let row of generationNumbers">
+<div class="universe-container" [ngStyle]="{'width':generationSize}">
+  <div *ngFor="let row of universeNumbers">
     <div *ngFor="let cell of row"> 
       <div class="cell" [ngStyle]="{'background': hasActiveCell(cell.x,cell.y) ? 'blue' : 'lightgray'}" (click)="setCell(cell.x, cell.y)"></div>
     </div>
