limit the visible area to given sizes

--- a/src/app/universe/universe.component.html
+++ b/src/app/universe/universe.component.html
@@ -1,16 +1,20 @@
 <div class="inputSizeText">
-  <p >Draw Start Value: </p>
-  <input class="inputSizeValue" (keyup)="onSetDrawStartValue(startBox.value)" #startBox value="{{drawStartValue}}">
+  <p > X Position: </p>
+  <input class="inputSizeValue" (keyup)="onSetXPosition(xBox.value)" #xBox value="{{drawXPosition}}">
 </div>
 <div class="inputSizeText">
-  <p >Draw End Value: </p>
-  <input class="inputSizeValue" (keyup)="onSetDrawEndValue(endBox.value)" #endBox value="{{drawEndValue}}">
+  <p > Y Position: </p>
+  <input class="inputSizeValue" (keyup)="onSetYPosition(yBox.value)" #yBox value="{{drawYPosition}}">
 </div>
+<div class="inputSizeText">
+    <p > Visible Square Size: </p>
+    <input class="inputSizeValue" (keyup)="onSetSquareSize(squareBox.value)" #squareBox value="{{drawSquareSize}}">
+  </div>
 
 <div class="universe-container">
   <div *ngFor="let row of universeNumbers" class="tr">
     <div *ngFor="let cell of row" class="td">
-      <div class="cell" [ngStyle]="{'background': hasActiveCell(cell.x,cell.y) ? 'blue' : 'lightgray'}" (click)="setCell(cell.x, cell.y)"></div>
+      <div *ngIf="cell !== undefined" class="cell" [ngStyle]="{'background': hasActiveCell(cell.x,cell.y) ? 'blue' : 'lightgray'}" (click)="setCell(cell.x, cell.y)"></div>
     </div>
   </div>
 </div>
