--- a/src/app/universe/universe.component.css
+++ b/src/app/universe/universe.component.css
@@ -1,22 +1,24 @@
 .universe-container{
     margin: auto;
     border-spacing: 0;
-    border: solid 2px darkgray; 
-    display: table;  
-    width: 100px;
-    height: 100px;
-    overflow-y: auto;
+    border: solid 1px darkgray;
+    width: 100%;
+    height: 100%; 
+    margin-top: 20px;
 }
 
 .inputSizeText{
-    float: left;
-    margin-left: 100px;
-    margin-bottom: 20px;
+    display: flex;
+}
+
+.universeModuleContainer{
+    margin-left: 150px;
 }
 
 .inputSizeValue{
-    margin-left: 40px; 
-    width: 100px
+    margin: 10px; 
+    width: 100px;
+    height: 20px;
 }
 
 .tr{
