Size of the universe (#2)
* first review follow-up: allow size to be set dynamically in the beginning

* added logic to load the gun on any universe size

* added optimization: working only with the living cells

* made the univers grow dynamically

* clean-up

* first draft in having smaller universes and no index search during evolution algorithm

* adjusted the gosper glider gun data

* fixed the dynamic resize of the universe

* adjusted the git image

* added readme for the evolution function

* limit the visible area to given sizes

* limit the visible area to given sizes

* clean-up

* better layout

* handle exceptional cases when setting input values

--- a/src/app/universe/universe.component.html
+++ b/src/app/universe/universe.component.html
@@ -1,7 +1,23 @@
-<div class="universe-container" [ngStyle]="{'width':universeContainerSize}">
-  <div *ngFor="let row of generation">
-    <div *ngFor="let cell of row">
-      <div class="cell" [ngStyle]="{'background': cell.getIsAlive() ? 'blue' : 'lightgray'}" (click)="cell.changeCellState()"></div>
+<div class="universeModuleContainer">
+  <div class="inputSizeText">
+    <p> X Position: </p>
+    <input class="inputSizeValue" (keyup)="onSetXPosition(xBox.value)" #xBox value="{{drawXPosition}}">
+  </div>
+  <div class="inputSizeText">
+    <p> Y Position: </p>
+    <input class="inputSizeValue" (keyup)="onSetYPosition(yBox.value)" #yBox value="{{drawYPosition}}">
+  </div>
+  <div class="inputSizeText">
+    <p> Visible Square Size: </p>
+    <input class="inputSizeValue" (keyup)="onSetSquareSize(squareBox.value)" #squareBox value="{{drawSquareSize}}">
+  </div>
+
+  <div class="universe-container" [ngStyle]="{'width':generationSize}">
+    <div *ngFor="let row of universeNumbers" class="tr">
+      <div *ngFor="let cell of row" class="td">
+        <div *ngIf="cell !== undefined" class="cell" [ngStyle]="{'background': hasActiveCell(cell.x,cell.y) ? 'blue' : 'lightgray'}"
+          (click)="setCell(cell.x, cell.y)"></div>
+      </div>
     </div>
   </div>
 </div>
