--- a/src/app/universe/universe.component.css
+++ b/src/app/universe/universe.component.css
@@ -1,10 +1,36 @@
 .universe-container{
     margin: auto;
     border-spacing: 0;
-    border: solid 2px darkgray; 
-    display: flex;
-    flex-flow: wrap;   
+    border: solid 1px darkgray;
+    width: 100%;
+    height: 100%; 
+    margin-top: 20px;
 }
+
+.inputSizeText{
+    display: flex;
+}
+
+.universeModuleContainer{
+    margin-left: 150px;
+}
+
+.inputSizeValue{
+    margin: 10px; 
+    width: 100px;
+    height: 20px;
+}
+
+.tr{
+    display: table-row;
+    overflow: inherit;
+}
+
+.td{
+    display: table-cell;
+    overflow: inherit;
+}
+
 
 .cell
 {
@@ -12,7 +38,7 @@
     padding: 0;
     border: solid 1px white;
     width: 10px;
-    height: 10px;
+    height: 10px;   
 }
 
 .alive
