adjustments and clean-up

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,14 +1,25 @@
 <div>
   <p>The Size: </p>
-  <input (keyup)="onSetSize(sizeBox.value)" #sizeBox style ='margin-left: 40px; width: 100px' value="{{initialSize}}">  
+  <input (keyup)="onSetSize(sizeBox.value)" #sizeBox class="inputSizeValue" value="{{initialSize}}">  
 </div>
+<div class="inputSizeText">
+    <p> X Position: </p>
+    <input class="inputSizeValue" (keyup)="onSetXPosition(xBox.value)" #xBox value="{{drawXPosition}}">
+  </div>
+  <div class="inputSizeText">
+    <p> Y Position: </p>
+    <input class="inputSizeValue" (keyup)="onSetYPosition(yBox.value)" #yBox value="{{drawYPosition}}">
+  </div>
+  <div class="inputSizeText">
+    <p> Visible Square Size: </p>
+    <input class="inputSizeValue" (keyup)="onSetSquareSize(squareBox.value)" #squareBox value="{{drawSquareSize}}">
+  </div>
 <ul id="menu">
   <li>
     <div>
       <a target="_blank" (click)="initGame()"> Init </a>
     </div>
   </li>
-
   <li>
     <div>
       <a target="_blank" (click)="loadGosperGliderGun()"> Load Gosper Glider Gun </a>
